@startuml Diagram
top to bottom direction

abstract class BaseModel

rectangle AnimalGroup {
    class Animal
    class AnimalFamily
    class Country
    class FoodType
}

rectangle EmployeeGroup {
    class AdminUser
    class Employee
    class EmployeePosition
}

rectangle RoomGroup {
    class Room
}

BaseModel <|-- Animal
BaseModel <|-- AnimalFamily
BaseModel <|-- Country
BaseModel <|-- Employee
BaseModel <|-- EmployeePosition
BaseModel <|-- FoodType
BaseModel <|-- Room

AdminUser --> Employee : user (OneToOne)

Animal --> AnimalFamily : animals (FK)
Animal --> Country : animals (FK)
Animal --> FoodType : animals (FK)
Animal --> Room : animals (FK)

Animal --> Employee : animals (FK)

Employee --> EmployeePosition : employees (FK)

@enduml